fixed - animation overflow bugs

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,11 @@
 html {
   font-size: 62.5%; /*1rem = 10px*/
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  overflow-x: hidden;
 }
 *,
 *::before,
@@ -118,21 +120,25 @@ body {
       0% means startPoint. Animation starts only when 0% of that Element visible on Screen.
       30% means endPoint. Animation doesn't completes untill 30% of element visible on Screen. bythe time, it reaches 30% full animation is completed.
   */
+  overflow-x: hidden;
 }
 .projects-container {
   animation: appearElementFromRight linear; /*name timefunction*/
   animation-timeline: view();
   animation-range: entry 0% cover 25%;
+  overflow-x: hidden;
 }
 .certificate-container {
   animation: appearElementFromLeft linear; /*name timefunction*/
   animation-timeline: view();
   animation-range: entry 0% cover 40%;
+  overflow-x: hidden;
 }
 .form {
   animation: appearElementFromRight linear; /*name timefunction*/
   animation-timeline: view();
   animation-range: entry 0% cover 30%;
+  overflow-x: hidden;
 }
 
 /* /////////////////// ***/
